--- a/Makefile.in
+++ b/Makefile.in
@@ -23,9 +23,18 @@ bindir = @bindir@
 srcdir = @srcdir@
 VPATH = @srcdir@
 
-.PHONY: all clean check install uninstall
-all clean check install uninstall:
+.PHONY: all clean
+all clean:
 	cd src && $(MAKE) $@
+	cd test && $(MAKE) $@
+
+.PHONY: lib install uninstall
+lib install uninstall:
+	cd src && $(MAKE) $@
+
+.PHONY: test check
+test check:
+	cd test && $(MAKE) $@
 
 .PHONY: dist
 dist: $(tarball)
@@ -38,7 +47,9 @@ distdir: $(distdir)
 
 $(distdir): FORCE
 	mkdir -p $(distdir)/src
-	cp CLA*.asc CLA.md CODEOWNERS CONTRIBUTING.md LICENSE README.md $(distdir)
+	mkdir -p $(distdir)/test
+	cp CLA.md CODEOWNERS CONTRIBUTING.md LICENSE README.md $(distdir)
+	cp -r CLA-signed $(distdir)
 	cp $(srcdir)/bootstrap.sh $(distdir)
 	cp $(srcdir)/configure.ac $(distdir)
 	cp $(srcdir)/configure $(distdir)
@@ -48,6 +59,9 @@ $(distdir): FORCE
 	cp $(srcdir)/src/Makefile.in $(distdir)/src
 	cp $(srcdir)/src/*.c $(distdir)/src
 	cp $(srcdir)/src/*.h $(distdir)/src
+	cp $(srcdir)/test/Makefile.in $(distdir)/test
+	cp $(srcdir)/test/*.c $(distdir)/test
+	cp $(srcdir)/test/*.h $(distdir)/test
 
 .PHONY: distcheck
 distcheck: $(tarball)
@@ -77,6 +91,7 @@ config.status: configure
 .PHONY: distclean
 distclean:
 	cd src && $(MAKE) $@
+	cd test && $(MAKE) $@
 	rm -f Makefile
 	rm -rf autom4te.cache
 	rm -f $(tarball)
