Added comments about arduino specific stuff.

--- a/library.properties
+++ b/library.properties
@@ -1,3 +1,4 @@
+# This file provides metadata for the Arduino IDE.
 name=bc-crypto-base
 version=0.1.0
 author=Christopher Allen <ChristopherA@LifeWithAlacrity.com>
