Added .gitignore to distribution build.

--- a/Makefile.in
+++ b/Makefile.in
@@ -48,20 +48,26 @@ distdir: $(distdir)
 $(distdir): FORCE
 	mkdir -p $(distdir)/src
 	mkdir -p $(distdir)/test
-	cp CLA.md CODEOWNERS CONTRIBUTING.md LICENSE README.md $(distdir)
-	cp -r CLA-signed $(distdir)
+	cp $(srcdir)/CLA.md $(distdir)
+	cp $(srcdir)/CODEOWNERS $(distdir)
+	cp $(srcdir)/CONTRIBUTING.md $(distdir)
+	cp $(srcdir)/LICENSE $(distdir)
+	cp $(srcdir)/README.md $(distdir)
+	cp -r $(srcdir)/CLA-signed $(distdir)
 	cp $(srcdir)/bootstrap.sh $(distdir)
 	cp $(srcdir)/configure.ac $(distdir)
 	cp $(srcdir)/configure $(distdir)
 	cp $(srcdir)/config.h.in $(distdir)
 	cp $(srcdir)/install-sh $(distdir)
 	cp $(srcdir)/Makefile.in $(distdir)
+	cp $(srcdir)/.gitignore $(distdir)
 	cp $(srcdir)/src/Makefile.in $(distdir)/src
 	cp $(srcdir)/src/*.c $(distdir)/src
 	cp $(srcdir)/src/*.h $(distdir)/src
 	cp $(srcdir)/test/Makefile.in $(distdir)/test
 	cp $(srcdir)/test/*.c $(distdir)/test
 	cp $(srcdir)/test/*.h $(distdir)/test
+	cp $(srcdir)/.gitignore $(distdir)/test
 
 .PHONY: distcheck
 distcheck: $(tarball)
